<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margenEstandar"
    android:background="@color/azulClaro">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margenEstandar"
        android:hint="@string/menuCrearComic"
        android:textColor="@color/negro"
        android:textSize="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitulo"
        android:hint="@string/edtNombre"
        android:textSize="@dimen/activity_horizontal_margin" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombre" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNombre"
        android:hint="@string/edtDescripcion"

        android:layout_marginTop="@dimen/margenEstandar"
        android:textSize="@dimen/activity_horizontal_margin" />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescripcion"
        android:maxLines="@integer/maxline" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtDescripcion"
        android:layout_centerHorizontal="true"
        android:text="@string/btnAceptar" />


</RelativeLayout>

