<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margenEstandar"
    android:background="@color/azulClaro">

    <TextView
        android:id="@+id/txtTituloComic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/activity_horizontal_margin"
        android:layout_margin="@dimen/margenEstandar"
        android:text="@string/txtNombreComic"/>


    <TextView
        android:id="@+id/txtDescripcionComic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margenEstandar"
        android:layout_below="@+id/txtTituloComic"
        android:text="@string/txtDescripcionComic"/>

    <TextView
        android:id="@+id/txtComentarioComic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margenEstandar"
        android:layout_below="@+id/txtDescripcionComic"
        android:text="@string/txtComentarioComic"
        android:maxLines="@integer/maxline"/>

</RelativeLayout>